--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
 
                     </ul>
                     <br>
-                    <div>
+                    <!-- <div>
                         <h1 class="px-5 mb-5">
                             ESLint Integration
                         </h1>
                         <p>Coming Soon...🛠</p>
-                    </div>
+                    </div> -->
                     <br>
                     <br>
                     <div>
@@ -185,7 +185,7 @@
             </div>
 
             <footer class="py-3 my-4 text-white">
-                <p class="text-center ">&copy; 2025 Chrisiisx</p>
+                <p class="text-center">&copy; 2025 Chrisiisx <br> <a href="https://github.com/Chrisiisx/Code-Commenting-Convention" target="_blank">GitHub Repository</a></p>
             </footer>
         </div>
 
